# DotNetBazel

./: .gitignore  DotNetBazel.sln  README.md  WORKSPACE  bazel-DotNetBazel  nuget2config.json
.devcontainer/: devcontainer.json
app/: BUILD.bazel  Program.cs
lib/: BUILD.bazel  MyFunctions.cs
tests/: BUILD.bazel  UnitTest1.cs  tests.csproj
