load("@io_bazel_rules_dotnet//dotnet:defs.bzl", "csharp_xunit_test")

csharp_xunit_test(
    name = "tests_xunit.dll",
    size = "medium",
    srcs = glob(["*.cs"]),
    #langversion = "7.3",
    deps = [
        "//lib:lib.dll",
        "@core_sdk_stdlib//:libraryset",
        "@xunit.assert//:lib",
        "@xunit.extensibility.core//:lib",
        "@xunit.extensibility.execution//:lib",
        "@fluentassertions//:net6.0_core"
    ],
)